--- a/css/main.css
+++ b/css/main.css
@@ -910,7 +910,7 @@ p:last-of-type {
 
 .header {
   height: 100vh;
-  background: url("http://placehold.it/1920x1080") no-repeat center 50%;
+  background: url("") no-repeat center 50%;
   background-size: cover;
   overflow: hidden;
 }
@@ -1113,7 +1113,7 @@ p:last-of-type {
 }
 
 .skills-display {
-  background: url("http://placehold.it/1920x1080") no-repeat center 50% #ddd;
+  background: url("") no-repeat center 50% #ddd;
   background-size: cover;
 }
 
@@ -1234,7 +1234,7 @@ p:last-of-type {
 }
 
 .stats-display {
-  background: url("http://placehold.it/1920x1080") no-repeat center 50% #ddd;
+  background: url("") no-repeat center 50% #ddd;
   background-size: cover;
 }
 
