--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,9 @@ p:last-of-type {
 
 .subtitle {
   margin-bottom: 1.5rem;
-  color: #a74752;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: .2rem .2rem #000;
 }
 
 .title_white {
@@ -1145,7 +1147,7 @@ p:last-of-type {
 
 .skill-bar {
   height: 100%;
-  background-color: #fff;
+  background-color: #0000ff;
 }
 
 .skill {
@@ -1154,7 +1156,9 @@ p:last-of-type {
   -webkit-transform: translateZ(0px) translate(0, -50%);
   transform: translateZ(0px) translate(0, -50%);
   color: #000;
-  font-weight: 700;
+  text-shadow: 1px 1px #fff;
+  font-size: 2.5rem;
+  font-weight: bold;
   margin-left: 2rem;
 }
 
