--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ p:last-of-type {
 
 .wrapper {
   overflow: hidden;
-  background-color: #0000ff;
+  background: linear-gradient(270deg, #000, #3333ff, #000);
 }
 
 .box_blur {
@@ -536,7 +536,7 @@ p:last-of-type {
   z-index: 9997;
   min-width: 100%;
   padding: 1.5rem 0;
-  background-color: #0000ff;
+  background: linear-gradient(180deg, #000, #3333ff, #000);
   font-weight: bold;
   border-bottom: 0.1rem solid #000;
   box-shadow: 0 0 0.8rem #ddd;
@@ -888,7 +888,7 @@ p:last-of-type {
 
 .welcome__link {
   font-size: 1.4rem;
-  color: #ff0000;
+  color: #fff;
   font-weight: bold;
   padding: .5rem 0;
   display: inline-block;
@@ -897,14 +897,13 @@ p:last-of-type {
 }
 
 .welcome__link:hover {
-  color: #ff0000;
+  color: #fff;
   font-weight: bold;
   border-color: transparent;
   margin: 0 .5rem;
   padding: .5rem 1rem;
   -webkit-transition: background-color 0.5s ease-out 0s;
   transition: background-color 0.5s ease-out 0s;
-  text-shadow: .2rem .2rem #000;
 }
 
 @media screen and (max-width: 700px) {
