--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ p:last-of-type {
 
 .wrapper {
   overflow: hidden;
-  background: linear-gradient(270deg, #000, #3333ff, #000);
+  background: linear-gradient(270deg, #0d0d0d, #3333ff, #0d0d0d);
 }
 
 .box_blur {
@@ -499,7 +499,7 @@ p:last-of-type {
   z-index: 9998;
   display: none;
   padding: 1.5rem 1rem;
-  background-color: #0000ff;
+  background-color: #000000;
 }
 
 .icon-menu {
@@ -536,7 +536,7 @@ p:last-of-type {
   z-index: 9997;
   min-width: 100%;
   padding: 1.5rem 0;
-  background: linear-gradient(180deg, #000, #3333ff, #000);
+  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
   font-weight: bold;
   border-bottom: 0.1rem solid #000;
   box-shadow: 0 0 0.8rem #ddd;
@@ -577,7 +577,7 @@ p:last-of-type {
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
   opacity: 0;
-  background-color: #0000ff;
+  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
   border-left: 0.1rem solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
 }
@@ -1083,7 +1083,7 @@ p:last-of-type {
 
 .skill-bar {
   height: 100%;
-  background-color: #0000ff;
+  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
 }
 
 .skill {
@@ -1891,7 +1891,7 @@ p:last-of-type {
 }
 
 .popup__content {
-  background-color: #0000ff;
+  background: linear-gradient(270deg, #0d0d0d, #3333ff, #0d0d0d);
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
@@ -1913,7 +1913,7 @@ p:last-of-type {
 }
 
 .popup__title {
-  text-shadow: 0.2rem 0.2rem 2rem #0000ff;
+  text-shadow: 0.2rem 0.2rem 2rem #3333ff;
   letter-spacing: 0.2rem;
   color: #fff;
   width: 90%;
