--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ p:last-of-type {
 
 .wrapper {
   overflow: hidden;
-  background: linear-gradient(270deg, #0d0d0d, #3333ff, #0d0d0d);
+  background: #4d4d4d;
 }
 
 .box_blur {
@@ -536,7 +536,7 @@ p:last-of-type {
   z-index: 9997;
   min-width: 100%;
   padding: 1.5rem 0;
-  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
+  background: #778899;
   font-weight: bold;
   border-bottom: 0.1rem solid #000;
   box-shadow: 0 0 0.8rem #ddd;
@@ -577,7 +577,7 @@ p:last-of-type {
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
   opacity: 0;
-  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
+  background: #1a1a1a;
   border-left: 0.1rem solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
 }
@@ -911,7 +911,6 @@ p:last-of-type {
 }
 
 .about-me__layout {
-  width: 49%;
   margin-right: 1%;
 }
 
@@ -930,7 +929,6 @@ p:last-of-type {
 }
 
 .about-me__sidebar {
-  width: 40%;
   padding: 2.5rem 5%;
   background-color: #696969;
 }
@@ -1083,7 +1081,7 @@ p:last-of-type {
 
 .skill-bar {
   height: 100%;
-  background: linear-gradient(180deg, #1a1a1a, #3333ff, #1a1a1a);
+  background: #1a1a1a;
 }
 
 .skill {
@@ -1396,7 +1394,7 @@ p:last-of-type {
 }
 
 .list-works__name-project_fade {
-  width: 98%;
+  width: 100%;
   padding: 1%;
   display: block;
   opacity: 0;
@@ -1807,7 +1805,7 @@ p:last-of-type {
  *footer
  */
 .footer {
-  background-color: #696969;
+  background-color: #778899;
   border-top: 1px solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
   font-weight: bold;
