--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a:hover, h2:hover {
 }
 
 p {
-  color: #fff;
+  color: #dcdcdc;
   font-weight: bold;
   text-shadow: .2rem .2rem #000;
   margin-bottom: 1rem;
@@ -256,7 +256,7 @@ p:last-of-type {
 
 .subtitle {
   margin-bottom: 1.5rem;
-  color: #fff;
+  color: #dcdcdc;
   font-weight: bold;
   text-shadow: .2rem .2rem #000;
 }
@@ -611,7 +611,7 @@ p:last-of-type {
 }
 
 .nav__link_active {
-  color: #fff;
+  color: #dcdcdc;
   text-shadow: .2rem .2rem #000;
   font-size: bold;
 }
@@ -1056,7 +1056,7 @@ p:last-of-type {
 }
 
 .skills__column {
-  color: #fff;
+  color: #dcdcdc;
   font-weight: bold;
   text-shadow: .2rem .2rem #000;
   width: 45%;
@@ -1089,7 +1089,7 @@ p:last-of-type {
   top: 50%;
   -webkit-transform: translateZ(0px) translate(0, -50%);
   transform: translateZ(0px) translate(0, -50%);
-  color: #fff;
+  color: #dcdcdc;
   text-shadow: .3rem .3rem #000;
   font-size: 2.5rem;
   font-weight: bold;
@@ -1561,7 +1561,7 @@ p:last-of-type {
 
 .timeline__content {
   border-left: 0.5rem solid #000;
-  color: #fff;
+  color: #dcdcdc;
   font-weight: bold;
   text-shadow: .2rem .2rem #000;
   background-color: #696969;
@@ -1589,7 +1589,7 @@ p:last-of-type {
 .timeline__date {
   display: block;
   font-size: 2.4rem;
-  text-shadow: .1rem .1rem #fff;
+  text-shadow: .1rem .1rem #dcdcdc;
   font-weight: 700;
   width: 100%;
   margin-bottom: 1rem;
@@ -1599,7 +1599,7 @@ p:last-of-type {
   width: 100%;
   font-size: 1.4rem;
   font-weight: bold;
-  color: #fff;
+  color: #dcdcdc;
   text-shadow: .1rem .1rem #000;
 }
 
@@ -1812,7 +1812,7 @@ p:last-of-type {
   padding: 2rem 0;
   min-width: 100%;
   position: relative;
-  text-shadow: .1rem .1rem #fff;
+  text-shadow: .1rem .1rem #dcdcdc;
   z-index: 2;
 }
 
