--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@ html {
 body {
   font-family: "Raleway", sans-serif;
   font-size: 1.6rem;
+  background-clip: url("../video.mp4");
 }
 
 .load-page .preloader:after {
