--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-  font-family: "Raleway", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.6rem;
   background-clip: url("../video.mp4");
   background-clip: no-repeat;
@@ -31,22 +31,21 @@ body {
 
 a {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   -webkit-transition: color 0.3s ease-out 0s;
   transition: color 0.3s ease-out 0s;
 }
 
 a:hover, h2:hover {
   color: #fff;
-  text-shadow: .3rem .3rem #778899;
+  text-shadow: .2rem .2rem #778899;
   transition: 0.3s;
 }
 
 p {
   color: #dcdcdc;
   font-weight: bold;
-/*  text-shadow: .2rem .2rem #000;
-*/  margin-bottom: 1rem;
+  margin-bottom: 1rem;
   line-height: 2.5rem;
 }
 
@@ -228,7 +227,6 @@ p:last-of-type {
   font-weight: bold;
   font-size: 3.5rem;
   color: #000;
-  text-shadow: .2rem .2rem #778899;
   text-transform: uppercase;
 }
 
@@ -268,7 +266,6 @@ p:last-of-type {
   margin-bottom: 1.5rem;
   color: #dcdcdc;
   font-weight: bold;
-  text-shadow: .2rem .2rem #778899;
 }
 
 .title_white {
@@ -546,9 +543,9 @@ p:last-of-type {
   z-index: 9997;
   min-width: 100%;
   padding: 1.5rem 0;
-  background: #778899;
+  background: #262626;
   font-weight: bold;
-  border-bottom: 0.1rem solid #000;
+  border-bottom: 0.1rem solid #262626;
   box-shadow: 0 0 0.8rem #ddd;
   -webkit-transform: translateZ(0px) translate(0, 0);
   transform: translateZ(0px) translate(0, 0);
@@ -587,7 +584,7 @@ p:last-of-type {
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
   opacity: 0;
-  background: #778899;
+  background: #262626;
   border-left: 0.1rem solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
 }
@@ -621,8 +618,9 @@ p:last-of-type {
 }
 
 .nav__link_active {
-  color: #dcdcdc;
-  text-shadow: .2rem .2rem #;
+  color: #fff;
+  text-shadow: .2rem .2rem #778899;
+  font-size: 18px;
   font-size: bold;
 }
 
@@ -810,14 +808,13 @@ p:last-of-type {
 .logo {
   font-size: 2.4rem;
   font-weight: bold;
-  color: #000;
+  color: #fff;
   text-transform: none;
 }
 
  .logo:hover {
   color: #fff;
   transition: 1s;
-  text-shadow: .3rem .3rem #000;
  }
 
 .logo_bottom-decor {
@@ -867,7 +864,7 @@ p:last-of-type {
 }
 
 .welcome {
-  color: #fff;
+  color: #000;
   width: 100%;
   text-align: center;
   position: absolute;
@@ -885,7 +882,6 @@ p:last-of-type {
   display: block;
   font-weight: 700;
   font-size: 8rem;
-  text-shadow: 0.2rem 0.2rem 2rem #0000ff;
   letter-spacing: 0.8rem;
 }
 
@@ -940,7 +936,6 @@ p:last-of-type {
 
 .about-me__sidebar {
   padding: 2.5rem 5%;
-  background-color: #696969;
 }
 
 .about-me__column {
@@ -1068,7 +1063,6 @@ p:last-of-type {
 .skills__column {
   color: #dcdcdc;
   font-weight: bold;
-  text-shadow: .2rem .2rem #000;
   width: 45%;
   margin-right: 5%;
 }
@@ -1100,7 +1094,6 @@ p:last-of-type {
   -webkit-transform: translateZ(0px) translate(0, -50%);
   transform: translateZ(0px) translate(0, -50%);
   color: #dcdcdc;
-  text-shadow: .3rem .3rem #000;
   font-size: 2.5rem;
   font-weight: bold;
   margin-left: 2rem;
@@ -1241,7 +1234,7 @@ p:last-of-type {
 }
 
 .list-works {
-  max-width: 1920px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -1573,7 +1566,6 @@ p:last-of-type {
   border-left: 0.5rem solid #000;
   color: #dcdcdc;
   font-weight: bold;
-  text-shadow: .2rem .2rem #000;
   background-color: #696969;
   position: relative;
   padding: 2rem 2.5rem;
@@ -1599,7 +1591,6 @@ p:last-of-type {
 .timeline__date {
   display: block;
   font-size: 2.4rem;
-  text-shadow: .1rem .1rem #dcdcdc;
   font-weight: 700;
   width: 100%;
   margin-bottom: 1rem;
@@ -1610,7 +1601,6 @@ p:last-of-type {
   font-size: 1.4rem;
   font-weight: bold;
   color: #dcdcdc;
-  text-shadow: .1rem .1rem #000;
 }
 
 .timeline__title {
@@ -1815,14 +1805,14 @@ p:last-of-type {
  *footer
  */
 .footer {
-  background-color: #778899;
+  background-color: #292929;
+  color: #fff;
   border-top: 1px solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
   font-weight: bold;
   padding: 2rem 0;
   min-width: 100%;
   position: relative;
-  text-shadow: .1rem .1rem #dcdcdc;
   z-index: 2;
 }
 
@@ -1921,7 +1911,6 @@ p:last-of-type {
 }
 
 .popup__title {
-  text-shadow: 0.2rem 0.2rem 2rem #000;
   letter-spacing: 0.2rem;
   color: #fff;
   width: 90%;
