--- a/css/main.css
+++ b/css/main.css
@@ -60,14 +60,18 @@ p:last-of-type {
 
 .responsive-video {
   width: 100%;
-  height: auto;
+  opacity: .5;
+  background-color: #000;
 }
 
-@media screen and (max-width: 400px) {
-  
+@media screen and (max-width: 534px) {
+  @media screen and (max-height: 600px) {
+
   .responsive-video {
+    height: 80%;
     width: 100%;
-    height: 100%;
+    }
+
   }
 }
 
@@ -865,6 +869,7 @@ p:last-of-type {
 
 .welcome {
   color: #000;
+  font-weight: 800;
   width: 100%;
   text-align: center;
   position: absolute;
