--- a/css/main.css
+++ b/css/main.css
@@ -37,14 +37,12 @@ a {
 }
 
 a:hover, h2:hover {
-  color: #fff;
-  text-shadow: .2rem .2rem #778899;
+  color: #a74752;
   transition: 0.3s;
 }
 
 p {
   color: #dcdcdc;
-  font-weight: bold;
   margin-bottom: 1rem;
   line-height: 2.5rem;
 }
@@ -58,11 +56,11 @@ p:last-of-type {
   height: auto;
 }
 
-/*.responsive-video {
-  width: 100%;
-  background-color: #000;
+  .responsive-img1 {
+    max-width: 100%;
+    height: auto;
 }
-*/
+
 .fullscreen-bg {
   top: 0;
   right: 0;
@@ -188,7 +186,7 @@ p:last-of-type {
 
 .wrapper {
   overflow: hidden;
-  background: #4d4d4d;
+  background: #EEEEEE;
 }
 
 .box_blur {
@@ -264,7 +262,6 @@ p:last-of-type {
 }
 
 .title {
-  font-weight: bold;
   font-size: 3.5rem;
   color: #000;
   text-transform: uppercase;
@@ -304,8 +301,7 @@ p:last-of-type {
 
 .subtitle {
   margin-bottom: 1.5rem;
-  color: #dcdcdc;
-  font-weight: bold;
+  color: #a74752;
 }
 
 .title_white {
@@ -544,8 +540,7 @@ p:last-of-type {
   z-index: 9997;
   min-width: 100%;
   padding: 1.5rem 0;
-  background: #262626;
-  font-weight: bold;
+  background: #fff;
   border-bottom: 0.1rem solid #262626;
   box-shadow: 0 0 0.8rem #ddd;
   -webkit-transform: translateZ(0px) translate(0, 0);
@@ -565,6 +560,7 @@ p:last-of-type {
 }
 
 .nav__link {
+  color: #000;
   display: inline-block;
   margin-left: 1rem;
 }
@@ -585,7 +581,7 @@ p:last-of-type {
   -webkit-transition-delay: 0s;
   transition-delay: 0s;
   opacity: 0;
-  background: #262626;
+  background: #fff;
   border-left: 0.1rem solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
 }
@@ -619,8 +615,7 @@ p:last-of-type {
 }
 
 .nav__link_active {
-  color: #fff;
-  text-shadow: .2rem .2rem #778899;
+  color: #a74752;
   font-size: 18px;
   font-size: bold;
 }
@@ -808,8 +803,7 @@ p:last-of-type {
 
 .logo {
   font-size: 2.4rem;
-  font-weight: bold;
-  color: #fff;
+  color: #000;
   text-transform: none;
 }
 
@@ -849,7 +843,7 @@ p:last-of-type {
 
 .logo__label {
   font-size: 1.4rem;
-  color: #fff;
+  color: #a74752;
   display: block;
 }
 
@@ -865,7 +859,7 @@ p:last-of-type {
 }
 
 .welcome {
-  color: #000;
+  color: #f8f8ff;
   font-weight: 800;
   width: 100%;
   text-align: center;
@@ -881,6 +875,7 @@ p:last-of-type {
 }
 
 .welcome__name {
+  text-shadow: .1rem .1rem #000;
   display: block;
   font-weight: 700;
   font-size: 8rem;
@@ -889,15 +884,14 @@ p:last-of-type {
 
 .welcome__label {
   display: inline-block;
-  font-weight: bold;
-  font-size: 1.6rem;
+  font-weight: 800;
+  font-size: 1.9rem;
   letter-spacing: 0.2rem;
 }
 
 .welcome__link {
   font-size: 1.4rem;
-  color: #fff;
-  font-weight: bold;
+  color: #000;
   padding: .5rem 0;
   display: inline-block;
   margin: 0 1.5rem;
@@ -905,7 +899,7 @@ p:last-of-type {
 }
 
 .welcome__link:hover {
-  color: #fff;
+  color: #a74752;
   font-weight: bold;
   border-color: transparent;
   margin: 0 .5rem;
@@ -1064,7 +1058,6 @@ p:last-of-type {
 
 .skills__column {
   color: #dcdcdc;
-  font-weight: bold;
   width: 45%;
   margin-right: 5%;
 }
@@ -1097,7 +1090,6 @@ p:last-of-type {
   transform: translateZ(0px) translate(0, -50%);
   color: #dcdcdc;
   font-size: 2.5rem;
-  font-weight: bold;
   margin-left: 2rem;
 }
 
@@ -1275,8 +1267,8 @@ p:last-of-type {
 }
 
 .list-works__row {
+  text-align: center;
   width: 100%;
-  box-sizing: border-box;
 }
 
 .list-works__wrap-img {
@@ -1384,6 +1376,7 @@ p:last-of-type {
 
 .list-works__overlay {
   background-color: rgba(0, 0, 0, 0.7);
+  box-sizing: border-box;
   opacity: 0;
   width: 100%;
   height: 100%;
@@ -1544,7 +1537,8 @@ p:last-of-type {
 .timeline__dotted {
   width: 1rem;
   height: 1rem;
-  border: 0.2rem solid #000;
+  border: 0.2rem solid #000
+;
   border-radius: 50%;
   background-color: #fff;
   position: absolute;
@@ -1566,8 +1560,7 @@ p:last-of-type {
 
 .timeline__content {
   border-left: 0.5rem solid #000;
-  color: #dcdcdc;
-  font-weight: bold;
+  color: #a74752;
   background-color: #696969;
   position: relative;
   padding: 2rem 2.5rem;
@@ -1601,8 +1594,7 @@ p:last-of-type {
 .timeline__place-work {
   width: 100%;
   font-size: 1.4rem;
-  font-weight: bold;
-  color: #dcdcdc;
+  color: #a74752;
 }
 
 .timeline__title {
@@ -1807,11 +1799,10 @@ p:last-of-type {
  *footer
  */
 .footer {
-  background-color: #292929;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   border-top: 1px solid #eee;
   box-shadow: 0 0 0.8rem #ddd;
-  font-weight: bold;
   padding: 2rem 0;
   min-width: 100%;
   position: relative;
@@ -1891,7 +1882,7 @@ p:last-of-type {
 }
 
 .popup__content {
-  background: #778899;
+  background: #696969;
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
@@ -1940,7 +1931,6 @@ p:last-of-type {
 }
 
 .popup__show-more:hover {
-  font-weight: bold;
   color: #fff;
 }
 
