--- a/css/main.css
+++ b/css/main.css
@@ -61,52 +61,17 @@ p:last-of-type {
   height: auto;
 }
 
-.fullscreen-bg {
-  top: 0;
+.responsive-video {
+  opacity: .6;
+  min-height: 100%;
+  min-width: 100%;
+  overflow: hidden;
+  position: absolute;
   right: 0;
+  top: 0;
   bottom: 0;
   left: 0;
-  overflow: hidden;
-  z-index: -100;
-}
-
-.fullscreen-bg__video {
-  position: absolute;
-  opacity: .5;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-@media (min-width: 250px ) {
-  .fullscreen-bg__video {
-    height: 300%;
-    top: -100%;
-  }
-}
-
-@media (max-width: 250px ) {
-  .fullscreen-bg__video {
-    width: 300%;
-    left: -100%;
-  }
-}
-
-@media (max-width: 200px) {
-
-  .fullscreen-bg__video {
-    position: absolute;
-    opacity: .5;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .fullscreen-bg__video {
-    display: none;
-  }
+  z-index: 0;
 }
 
 .close-arrow {
@@ -6076,3 +6041,4 @@ _::full-page-media, _:future,
     transform: translateZ(0) translate(0, 0) scale(1);
   }
 }
+
