--- a/css/main.css
+++ b/css/main.css
@@ -26,8 +26,9 @@ html {
 body {
     font-family: "Raleway", sans-serif;
     font-size: 1.6rem;
-    background-clip: url('../video.mp4');
+    background-clip: url(../video.mp4);
     background-repeat: no-repeat;
+
 }
 
 .load-page .preloader:after {
