--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,15 @@ p:last-of-type {
     margin-bottom: 7rem;
 }
 
+.main-container__header2 {
+    text-align: center;
+    position: relative;
+    padding-bottom: 1rem;
+    margin-top: 6rem;
+    margin-bottom: 5rem;
+
+}
+
 @media screen and (max-width: 640px) {
     .main-container__header {
         margin-bottom: 4rem;
