--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
     font-family: "Raleway", sans-serif;
     font-size: 1.6rem;
     background-clip: url(../video.mp4);
-    background-repeat: no-repeat;
+    
 }
 
 .load-page .preloader:after {
@@ -59,23 +59,8 @@ p:last-of-type {
     right: 0;
     top: 0;
     bottom: 0;
-    left: 0;
+    left: -15%;
     z-index: 0;
-}
-
-@media screen(max-width: 600px) {
-    .responsive-video {
-        opacity: .6;
-        min-height: 100%;
-        min-width: 100%;
-        overflow: hidden;
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        z-index: 0;
-    }
 }
 
 .close-arrow {
